<resources>
    <string name="app_name">HomeworkVIII</string>
    <string name="stringHeight">身高</string>
    <string name="stringWeight">體重</string>
    <string name="error">錯誤!資料未輸入</string>
    <string name="back">返回</string>
    <string name="activityResult">activityResult</string>
    <string name="strBtn1">面對BMI現實</string>
    <string name="strBtn2">結束去運動</string>
    <string name="strTextView">BMI值為:</string>
</resources>
