<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResultActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringHeight"
        />

    <EditText
        android:id="@+id/idHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="-10dp"
        android:hint=""
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/stringWeight" />

    <EditText
        android:id="@+id/idWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint=""
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="送出" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="清除" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onBackClick"
        android:text="@string/back" />


</LinearLayout>