<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btnUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="330dp"
        android:layout_marginLeft="330dp"
        android:layout_marginTop="137dp"
        android:text="@string/strBtn1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="319dp"
        android:layout_marginLeft="319dp"
        android:layout_marginTop="218dp"
        android:text="@string/strTextView" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="218dp"
        android:layout_marginEnd="302dp"
        android:layout_marginRight="302dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="109dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="337dp"
        android:layout_marginLeft="337dp"
        android:layout_marginTop="272dp" />

    <Button
        android:id="@+id/btnDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:onClick="onEnd"
        android:text="@string/strBtn2" />

</RelativeLayout>